--- a/index.html
+++ b/index.html
@@ -16,30 +16,13 @@
      <body class="main-container"> 
         <div class="box">
         <header>
-            <!-- <div class="header-container">
-                <h5>Choose another country or region to see content specific to your location.</h5>
-            <div class="select-form">
-                <select class="form-select form-select-lg mb-3" aria-label="Large select example">
-                    <option selected>Georgia</option>
-                    <option value="1">Other country or region</option>
-                    <input class="continue" type="button" value="Continue" />
-                    <ul>
-                        <li><span class="close">x</span></li>
-
-                      </ul>
-                
-                </select>
-             </div>
-
-            </div> -->
-
             <div class="header-nav">
                 
-                <a href="#">
+                 <a href="#">
                     <img class=" Apple-logo" src="images/154870.png" alt="Apple-Logo"> 
                 </a>
-                <nav>
-                    <ul class="header-ul">
+                  <nav>
+                     <ul class="header-ul">
                         <li><a class="store" href="#">store</a></li>
                         <li><a class="Mac" href="#">Mac</a></li>
                         <li><a class="iPad"href="#">iPad</a></li>
@@ -52,16 +35,149 @@
                         <li><a class="Accessories" href="#">Accessories</a></li>
                         <li><a class="Support" href="#">Support</a></li>
                     </ul>
-                </nav>
+                 </nav>
                 <a href="#">
-                    <img  class="search-logo"src="images/1410285.png" alt="search-logo">
+                     <img  class="search-logo"src="images/1410285.png" alt="search-logo">
                 </a>
                 <a href="#">
                     <img class="shopping-bag" src="images/1594265.png" alt="shopping-bg icon">
                 </a> 
-
+             </div>
         </header>
+          <div class="products">
+            <div class="product-different">
+                <a href="#">
+                    <img  class="iphone_icon"src="https://www.apple.com/v/iphone/home/bq/images/chapternav/iphone_15_pro_light__diyvo6c7yu82_large.svg" alt="icon">
+               </a>
+               <a href="#">
+              <h4 class="iphone-h4-15">iPhone 15 Pro</h4>
+                </a>
+                <h5 class="iphone-h5">New</h5>
+            </div>
 
+            <div class="product-different">
+                <a href="#">
+                    <img  class="iphone_icon"src="https://www.apple.com/v/iphone/home/bq/images/chapternav/iphone_15_light__euftnkhrzdea_large.svg" alt="icon">
+               </a>
+               <a href="#">
+              <h4 class="iphone-h4">iPhone 15</h4>
+                </a>
+                <h5 class="iphone-h5">New</h5>
+            </div>
+
+            <div class="product">
+                <a href="#">
+                    <img  class="iphone_icon"src="https://www.apple.com/v/iphone/home/bq/images/chapternav/iphone_14_light__fwknsxkf80uq_large.svg" alt="icon">
+               </a>
+               <a href="#">
+              <h4 class="iphone-h4">iPhone 14</h4>
+                </a>
+            </div>
+
+            <div class="product">
+                <a href="#">
+                    <img  class="iphone_icon"src="https://www.apple.com/v/iphone/home/bq/images/chapternav/iphone_13_light__ewo3e0sf67o2_large.svg" alt="icon">
+               </a>
+               <a href="#">
+              <h4 class="iphone-h4">iPhone 13</h4>
+                </a>
+            </div>
+
+            <div class="product">
+                <a href="#">
+                    <img  class="iphone_iconSE"src="https://www.apple.com/v/iphone/home/bq/images/chapternav/iphone_se_light__fhg8duy6ffau_large.svg" alt="icon">
+               </a>
+               <a href="#">
+              <h4 class="iphone-h4">iPhone SE</h4>
+                </a>
+            </div>
+
+            <div class="product">
+                <a href="#">
+                    <img  class="iphone_icon"src="https://www.apple.com/v/iphone/home/bq/images/chapternav/iphone_compare_light__f4jj7brpbvm2_large.svg" alt="icon">
+               </a>
+               <a href="#">
+              <h4 class="iphone-h4">Compare</h4>
+                </a>
+            </div>
+
+            <div class="product">
+                <a href="#">
+                    <img  class="iphone_icon"src="https://www.apple.com/v/iphone/home/bq/images/chapternav/airpods_light__8oj157p2476a_large.svg" alt="icon">
+               </a>
+               <a href="#">
+              <h4 class="iphone-h4">AirPods</h4>
+                </a>
+            </div>
+
+            <div class="product">
+                <a href="#">
+                    <img  class="iphone_icon-AirTag"src="https://www.apple.com/v/iphone/home/bq/images/chapternav/airtag_light__cb2bmnv6aoeu_large.svg" alt="icon">
+               </a>
+               <a href="#">
+              <h4 class="iphone-h4">AirTag</h4>
+                </a>
+            </div>
+
+            <div class="product">
+                <a href="#">
+                    <img  class="iphone_icon"src="https://www.apple.com/v/iphone/home/bq/images/chapternav/accessories_light__ed5l6ipsevqu_large.svg" alt="icon">
+               </a>
+               <a href="#">
+              <h4 class="iphone-h4">Accessories</h4>
+                </a>
+            </div>
+
+            <div class="product">
+                <a href="#">
+                    <img  class="iphone_icon-card"src="https://www.apple.com/v/iphone/home/bq/images/chapternav/iphone_apple_card_light__dtut839e76c2_large.svg" alt="icon">
+               </a>
+               <a href="#">
+              <h4 class="iphone-h4">Apple Card</h4>
+                </a>
+            </div>
+
+            <div class="product">
+                <a href="#">
+                    <img  class="iphone_icon-iOS"src="https://www.apple.com/v/iphone/home/bq/images/chapternav/iphone_ios_light__b8s4ws8o77iq_large.svg" alt="icon">
+               </a>
+               <a href="#">
+              <h4 class="iphone-h4">iOS 17</h4>
+                </a>
+            </div>
+
+            <div class="product">
+                <a href="#">
+                    <img  class="iphone_icon"src="https://www.apple.com/v/iphone/home/bq/images/chapternav/shop_iphone_light__b2toggskllle_large.svg" alt="icon">
+               </a>
+               <a href="#">
+              <h4 class="iphone-h4">Shop iPhone</h4>
+                </a>
+            </div>
+          </div>
+          <div class="offer">
+           <p >Get $200–$650 in credit toward iPhone 15 or iPhone 15 Pro when you trade in iPhone 11 or higher.1 Shop iPhone ></p>
+          <!-- <span>
+            <p>Get $200–$650 in credit toward iPhone 15 or iPhone 15 Pro when you trade in iPhone 11 or higher.1</p> 
+            <a href="#">Shop iPhone > </a> 
+            </span>
+          </div> -->
+
+        </div>
+
+        <div class="section-content">
+             <img class="section-image" src="https://www.apple.com/v/iphone/home/bq/images/overview/hero/hero_iphone_15_pro__eqwrvy72748y_medium_2x.jpg" alt="iPhone">
+        <div class="content-absolute">
+            <h2 class="section-h2">New</h2>
+            <h1 class="section-h1">iPhone 15 Pro</h1>
+            <img class="section-Titanium" src="https://www.apple.com/v/iphone/home/bq/images/overview/hero/headline_titanium__cj5ay941qj6u_medium_2x.jpg" alt="Titanium">
+            <p class="section-p">From $999 or $41.62/mo. for 24 mo.2</p>
+            <input class="button" type="button" value="Buy" />
+            <a href="#">
+              <p class="learnmore">Learn more ></p>
+            </a>
+        </div>
+        </div>
         </div>
     </body>
 </html>
